--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_storage: ^11.2.1
   awesome_dialog: ^3.0.2
+  intl: ^0.18.1
 
 flutter_native_splash:
   color: "#42a5f5"
