--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.18.1
   select_form_field: ^2.2.0
   time_picker_spinner_pop_up: ^1.2.0
+  firebase_database: ^10.2.1
 
 flutter_native_splash:
   color: "#42a5f5"
