--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   select_form_field: ^2.2.0
   time_picker_spinner_pop_up: ^1.2.0
   firebase_database: ^10.2.1
+  scaled_list: ^2.0.0
+  percent_indicator: ^4.2.3
 
 flutter_native_splash:
   color: "#42a5f5"
